--- a/package.json
+++ b/package.json
@@ -4,6 +4,18 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "fastify": "^4.25.2"
+    "@fastify/cors": "^11.0.1",
+    "@fastify/mongodb": "^9.0.2",
+    "dotenv": "^16.5.0",
+    "fastify": "^5.3.2",
+    "mongodb": "^6.16.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^7.1.0"
   }
 }
