--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^2.0.22",
-    "supertest": "^7.1.0"
+    "supertest": "^7.1.1"
+  },
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch"
   }
 }
