--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.14.3"
+    "mongoose": "^8.14.3",
+    "openai": "^4.98.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
