--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/mongodb": "^9.0.2",
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
     "mongodb": "^6.16.0",
