--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.810.0",
+    "@aws-sdk/s3-request-presigner": "^3.810.0",
     "@fastify/cors": "^11.0.1",
     "@fastify/mongodb": "^9.0.2",
+    "@fastify/multipart": "^9.0.3",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.3",
     "openai": "^4.98.0"
